# giflet

./: .gitignore  Cargo.toml  README.md  giflet.bash
src/: build.rs  cli.rs  main.rs
